# acap-rs-app-template

./: Cargo.toml  Dockerfile  Makefile  README.md  about.toml  manifest.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml
docker/: install_rust.sh
src/: main.rs
