[package]
# Keep in sync with both
# - `acapPackageConf.setup.appName` in `manifest.json`
# - `PACKAGE` in `Makefile`
name = "hello_world"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4.21"

app-logging = { git = "https://github.com/AxisCommunications/acap-rs.git", branch="factor_out_app_logging" }
